--- a/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
+++ b/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
@@ -128,6 +128,10 @@ BR2_PACKAGE_ZEROTIER_ONE=y
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(HOME)/.ccache"
 
+# FFMPEG
+BR2_PACKAGE_FFMPEG=y
+BR2_PACKAGE_FFMPEG_SWSCALE=y
+
 # External
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
