--- a/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
+++ b/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
@@ -88,10 +88,10 @@ BR2_PACKAGE_MOTORS=y
 BR2_PACKAGE_OPUS_OPENIPC=y
 BR2_PACKAGE_OPUS_OPENIPC_FIXED_POINT=y
 # BR2_PACKAGE_SSHPASS is not set
-BR2_PACKAGE_UACME_OPENIPC=y
+#BR2_PACKAGE_UACME_OPENIPC=y
 BR2_PACKAGE_VTUND_OPENIPC=y
 BR2_PACKAGE_YAML_CLI=y
-BR2_PACKAGE_QUIRC_OPENIPC=y
+#BR2_PACKAGE_QUIRC_OPENIPC=y
 
 # WiFi
 BR2_PACKAGE_WIRELESS_TOOLS=y
@@ -111,7 +111,7 @@ BR2_PACKAGE_WIREGUARD_TOOLS=y
 BR2_PACKAGE_IPTABLES=y
 
 # MQTT
-BR2_PACKAGE_MOSQUITTO=y
+#BR2_PACKAGE_MOSQUITTO=y
 # BR2_PACKAGE_MOSQUITTO_BROKER is not set
 
 # ZEROTIER
@@ -129,8 +129,7 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(HOME)/.ccache"
 
 # FFMPEG
-BR2_PACKAGE_FFMPEG=y
-BR2_PACKAGE_FFMPEG_SWSCALE=y
+BR2_PACKAGE_FFMPEG_OPENIPC=y
 
 # External
 BR2_TOOLCHAIN_EXTERNAL=y
