--- a/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
+++ b/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
@@ -52,7 +52,8 @@ BR2_TARGET_GENERIC_HOSTNAME="openipc-gk7205v300"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL)/package/all-patches"
 
 # OpenIPC packages
-BR2_PACKAGE_BARESIP_OPENIPC=y
+#BR2_PACKAGE_BARESIP_OPENIPC=y
+BR2_PACKAGE_BARESIP_GOKE_OPENIPC=y
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/package/busybox/busybox.config"
 BR2_PACKAGE_DROPBEAR_OPENIPC=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
