--- a/general/package/Config.in
+++ b/general/package/Config.in
@@ -8,6 +8,7 @@ source "$BR2_EXTERNAL_GENERAL_PATH/package/autonight/Config.in"
 source "$BR2_EXTERNAL_GENERAL_PATH/package/aws-producer/Config.in"
 source "$BR2_EXTERNAL_GENERAL_PATH/package/aws-webrtc/Config.in"
 source "$BR2_EXTERNAL_GENERAL_PATH/package/baresip-openipc/Config.in"
+source "$BR2_EXTERNAL_GENERAL_PATH/package/baresip-goke-openipc/Config.in"
 source "$BR2_EXTERNAL_GENERAL_PATH/package/capjpeg/Config.in"
 source "$BR2_EXTERNAL_GENERAL_PATH/package/comgt/Config.in"
 source "$BR2_EXTERNAL_GENERAL_PATH/package/datalink/Config.in"
