loading goke module

--- a/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
+++ b/br-ext-chip-goke/configs/gk7205v300_ultimate_defconfig
@@ -65,7 +65,7 @@ BR2_PACKAGE_HISILICON_OPENSDK=y
 BR2_PACKAGE_IPCTOOL=y
 BR2_PACKAGE_JSON_C=y
 BR2_PACKAGE_JSONFILTER=y
-BR2_PACKAGE_LAME_OPENIPC=y
+# BR2_PACKAGE_LAME_OPENIPC=y
 BR2_PACKAGE_LIBCURL_OPENIPC=y
 BR2_PACKAGE_LIBCURL_OPENIPC_CURL=y
 # BR2_PACKAGE_LIBCURL_OPENIPC_VERBOSE is not set
@@ -91,7 +91,7 @@ BR2_PACKAGE_OPUS_OPENIPC_FIXED_POINT=y
 # BR2_PACKAGE_SSHPASS is not set
 #BR2_PACKAGE_UACME_OPENIPC=y
 BR2_PACKAGE_VTUND_OPENIPC=y
-BR2_PACKAGE_YAML_CLI=y
+# BR2_PACKAGE_YAML_CLI=y
 #BR2_PACKAGE_QUIRC_OPENIPC=y
 
 # WiFi
@@ -124,6 +124,7 @@ BR2_PACKAGE_ZEROTIER_ONE=y
 # DEBUG
 # BR2_PACKAGE_HOST_GDB is not set
 # BR2_PACKAGE_GDB is not set
+BR2_PACKAGE_GDB=y
 
 # CCACHE
 BR2_CCACHE=y
